# nerve

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  codex-sync-format.md  codex-sync.md  config.md  cron.md  memory.md  migration.md  observability.md  plans.md  sdk-sessions.md  setup.md  sources.md  tasks.md  worker-guide.md
docs/plans/: codex-backend.md
nerve/: __init__.py  _anyio_patch.py  _env.py  anthropic.py  backup.py  bootstrap.py  cli.py  config.py  db.py  ollama.py  pairing.py
nerve/agent/: cache_policy.py  engine.py  interactive.py  prompts.py  sessions.py  streaming.py  tools.py
nerve/channels/: router.py  telegram.py
nerve/cron/: gate_plugins.py  gates.py  jobs.py  service.py
nerve/db/: __init__.py  audit.py  base.py  cron.py  files.py  maintenance.py  mcp.py  messages.py  notifications.py  plans.py  sessions.py  skills.py  sources.py  task_statuses.py  tasks.py  usage.py  wakeups.py
nerve/external_agents/: __init__.py  registry.py  sync_service.py  writer.py
nerve/gateway/: auth.py  diff.py  routes.py  server.py
nerve/houseofagents/: runner.py  service.py
nerve/mcp_server/: audit.py  auth.py  http.py  loopback.py  server.py  session.py
nerve/proxy/: service.py
scripts/: backtest_cache_ttl.py  check_codex_schema.py  codex_smoke.py
tests/: conftest.py  test_anthropic.py  test_anyio_patch.py  test_autonomous_turns.py  test_backup.py  test_bootstrap.py  test_cache_policy.py  test_cli_docker.py  test_codex_appserver.py  test_codex_diffs.py  test_codex_ingester.py  test_codex_integrity.py  test_codex_local_rollout.py  test_codex_mcp_sync_convergence.py  test_codex_protocol.py  test_codex_source_integration.py  test_codex_translator.py  test_codex_workspace_filter.py  test_config_resolution.py  test_cost_accounting.py  test_cron.py  test_cron_gate_plugins.py  test_cron_gates.py  test_db.py  test_db_atomicity.py  test_db_pragmas.py  test_db_retention.py  test_diff.py  test_engine.py  test_engine_backend_selection.py  test_engine_options.py  test_env_defaults.py  test_external_agents_claude_code.py  test_external_agents_codex.py  test_external_agents_registry.py  test_external_agents_renderers.py  test_external_agents_sync_service.py  test_external_agents_writer.py  test_github_repos_source.py  test_github_source_actors.py  (+34 more)
web/: package-lock.json  package.json
(+205 files in other folders)
