[project]
name = "nerve"
version = "0.1.0"
description = "Personal AI assistant — lightweight, single-process, purpose-built"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.21.0",
    "pyyaml>=6.0",
    "python-telegram-bot>=21.0",
    "claude-agent-sdk>=0.2.82",
    "apscheduler>=3.11.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "click>=8.1.0",
    "telethon>=1.38.0",
    # [bedrock] pulls boto3/botocore, required by AnthropicBedrock for AWS SigV4
    # request signing (session title generation and other direct-SDK fast-model calls).
    "anthropic[bedrock]>=0.45.0",  # used by memu_bridge for event date resolution
    "memu-py==1.4.0",  # pinned — nerve monkey-patches memU internals (see memu_bridge._patch_sqlite_bugs)
    "watchfiles>=1.0.0",
    "html2text>=2024.2.26",
    # Optional xmemory.ai structured-memory layer — only active when an
    # xmemory api_key + instance_id are configured (see XmemoryConfig).
    "xmemory-ai>=0.5.3",
    # Optional observability stack — only active when langfuse keys are
    # configured. All three are pure-Python wheels.
    "langfuse>=3.0.0",
    "langsmith[claude-agent-sdk]>=0.4.0",
    "opentelemetry-instrumentation-anthropic>=0.40.0",
    # Generic OTLP export (traces/metrics/logs) — active only when
    # telemetry.endpoint is configured. opentelemetry-api/sdk + the OTLP
    # http exporter are already pulled transitively by langfuse/langsmith;
    # pinned here explicitly to freeze the version matrix (core 1.{N} pairs
    # with instrumentation 0.{N}b). structlog backs the structured logging.
    "opentelemetry-api>=1.42,<2",
    "opentelemetry-sdk>=1.42,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.42,<2",
    "opentelemetry-instrumentation-fastapi>=0.63b0,<1",
    "opentelemetry-instrumentation-httpx>=0.63b0,<1",
    "opentelemetry-instrumentation-system-metrics>=0.63b0,<1",
    "structlog>=24.1.0",
]

[project.scripts]
nerve = "nerve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nerve"]

[tool.hatch.build.targets.wheel.force-include]
"nerve/templates" = "nerve/templates"
